--- a/CIT230/demo/styles/main.css
+++ b/CIT230/demo/styles/main.css
@@ -1,4 +1,46 @@
-h1 {
-    color: #efefef;
+body {
+    font-size: 16px;
+    line-height: 32px;
+    font-family:sans-serif;
+    color:#000;
+}
 
+h1 {
+    font-size:2.4rem;
+    color: whitesmoke;
+    text-align: center;
+
+}
+h2 {
+    font-size: 2.0rem; 
+    text-align: center;
+    border-bottom: 1px solid #bbb;
+}
+
+header, main, footer {
+    margin: 1.25rem auto;
+    padding: 1rem;
+    max-width: 800px;
+
+}
+
+header, footer, footer a {
+    text-align: center;
+    background-color:lightcoral;
+    color: whitesmoke;
+}
+
+header img {
+    width: 300px;
+    height: 300px;
+    float: right;
+}
+
+footer {
+    font-size: smaller;
+    background-color: lightcoral
+
+}
+ul {
+    text-align: left;
 }
