--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -1,7 +1,8 @@
 body {
     font-size: 16px;
     line-height: 32px;
-    font-family:sans-serif;
+    font-family: 'Mansalva', cursive;
+    font-family: 'Noticia Text', serif;
     color:#000;
 }
 
