--- a/cit230/lesson2/styles/small.css
+++ b/cit230/lesson2/styles/small.css
@@ -6,11 +6,10 @@ body {
     color:#000;
 }
 
-h1,h3 {
+h1{
     font-size:2.4rem;
     color: whitesmoke;
     text-align: center;
-
 }
 h2 {
     font-size:2.4rem;
