--- a/cit230/lesson8/styles/tablebuild.css
+++ b/cit230/lesson8/styles/tablebuild.css
@@ -1,12 +1,19 @@
 body{
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+
 }
 
 table, th, tr ,td{
     border: 1px solid gray;
     border-collapse: collapse;
-    padding: 5px;
+    padding: 7px;
+    font-weight: 400;
+
 }
+table{
+    box-shadow: 10px 10px 10px #888888;
+}
+
 
 td{
     text-align: center;
@@ -15,13 +22,27 @@ td{
 th{
     background-color: #628ca6;
     color:white;
+    font-weight:700;
 }
 
 th[colspan="3"] {
     background-color: #7fb9c2;
     color:black;
+    padding: 0.5em;
+    font-size: 23px;
+    font-weight: 700;
+}
+ 
+td[colspan="3"] {
+    background-color: #7fb9c2;
+    font-size:10px;
 }
 
+td[colspan="1"]{
+    background-color: #628ca6;
+    color: white;
+    font-weight: 400;
+}
 /* colspan on 2nd td for black friday
 */
 
