--- a/cit230/lesson7/styles/large.css
+++ b/cit230/lesson7/styles/large.css
@@ -4,4 +4,10 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
     
+    #gallery figcaption {
+        color:black;
+        font-family: 'PT Serif', serif;
+        text-align: center;
     }
+    }
+    
