--- a/cit230/lesson9/styles/medium.css
+++ b/cit230/lesson9/styles/medium.css
@@ -12,6 +12,10 @@
 	.navigation li a {
 		color: white;
 	}
+
+	.grid {
+		grid-template-columns: 1fr 1fr;
+	}
 	/* id selectors */
 	#map {
 		display: block;
